# fetch

./: .cproject  .gitignore  .project  AddFetchPaths.props  AddFetchPaths.vsprops  CMakeLists.txt  CommonControls.props  CommonControls.vsprops  Doxyfile.in  GoogleProtobufDebug32.props  LICENSE  TcpProtocol.txt  config.h.in  fetch.sln  timer.py
TestAsynQ/: ReadMe.txt  TestAsynQ.cpp  TestAsynQ.vcproj  TestAsynQ.vcxproj  TestAsynQ.vcxproj.filters  stdafx.cpp  stdafx.h
TestDAQ/: ReadMe.txt  TestDAQ.cpp  TestDAQ.vcproj  TestDAQ.vcxproj  TestDAQ.vcxproj.filters  stdafx.cpp  stdafx.h
TestDigiDaq/: ReadMe.txt  TestDigiDaq.cpp  TestDigiDaq.vcproj  TestDigiDaq.vcxproj  TestDigiDaq.vcxproj.filters  stdafx.cpp
TestDigitizer/: ReadMe.txt  TestDigitizer.cpp  TestDigitizer.vcproj  TestDigitizer.vcxproj  TestDigitizer.vcxproj.filters  stdafx.cpp
TestRingFIFO/: ReadMe.txt  TestRingFIFO.cpp  TestRingFIFO.vcproj  TestRingFIFO.vcxproj  TestRingFIFO.vcxproj.filters  stdafx.cpp
TestTicTocTimer/: ReadMe.txt  TestTicTocTimer.cpp  TestTicTocTimer.vcproj  TestTicTocTimer.vcxproj  TestTicTocTimer.vcxproj.filters  stdafx.cpp  stdafx.h
TestUtilImage/: SConstruct  im.cpp  im.py
TestVideoDisplay/: ReadMe.txt  TestVideoDisplay.cpp  TestVideoDisplay.rc  TestVideoDisplay.vcproj  TestVideoDisplay.vcxproj  TestVideoDisplay.vcxproj.filters  resource.h  stdafx.cpp  stdafx.h
Translate/: ReadMe.txt  Translate.cpp  Translate.h  Translate.rc  Translate.vcproj  Translate.vcxproj  Translate.vcxproj.filters  TranslateDlg.cpp  TranslateDlg.h  resource.h  stdafx.cpp  stdafx.h
Translate/res/: Translate.rc2
cmake/: FindAlazar.cmake  FindC843.cmake  FindDirectX.cmake  FindEigen3.cmake  FindGLEW.cmake  FindMylib.cmake  FindNIDAQmx.cmake  FindNIScope.cmake  FindProtobuf.cmake
doc/: Doxyfile.in  Makefile  make.bat
doc/source/: conf.py.in  index.rst  overview.inc
fetch/: Agents.cd  DisableWarnings.props  DisableWarnings.vsprops  MessageTypes.cd  NIDAQmx.props  NIDAQmx.vsprops  NIScope.props  NIScope.vsprops  ReadMe.txt  Resource.h  Tasks.cd  agent.cpp  agent.h  asynq.cpp  asynq.h  common.cpp  common.h  device-digitizer-task-fetch-forever.cpp  device-digitizer-task-fetch-forever.h  device-digitizer-task-triggered.cpp  device-digitizer.cpp  device-digitizer.h  device-disk-stream.cpp  device-disk-stream.h  device-galvo-mirror.cpp  device-galvo-mirror.h  device-scanner.c  device-scanner.cpp  device-scanner.h  device-task-digitizer-fetch-forever.cpp  device-task-digitizer-triggered.cpp  device-task-digitizer-triggered.h  device-task-galvo-mirror-cont-triangle-wave.cpp  device-task-galvo-mirror-cont-triangle-wave.h  device-task-galvo-triangle-wave.cpp  device-task-galvo-triangle-wave.h  device-task-galvo-triggered.cpp  device-task-galvo-triggered.h  device-task-scanner-video.cpp  device-task-scanner-video.h  (+74 more)
fetch/devices/: DiskStream.cpp  DiskStream.h  LinearScanMirror.cpp  LinearScanMirror.h  Microscope.cpp  Microscope.h  NIDAQAgent.cpp  NIDAQAgent.h  Scanner3D.cpp  Scanner3D.h  ZPiezo.cpp  ZPiezo.h  device-digitizer.h  device-scanner.h  device-worker.h  digitizer.cpp  digitizer.h  pockels.cpp  pockels.h  scanner2D.cpp  scanner2D.h  shutter.cpp  shutter.h
fetch/old/: device-disk-stream.cpp  device-disk-stream.h  device-scanner.cpp  device-scanner.h  device-task-scanner-video.cpp  device-task-worker.h  device-task.cpp  device-task.h  device.h  microscope.cpp  microscope.h
fetch/proto/: digitizer.proto  scanner2d.proto  shutter.proto
fetch/tasks/: File.cpp  File.h  StackAcquisition.cpp  StackAcquisition.h  Video.cpp  Video.h  fetch-forever.cpp  fetch-forever.h  microscope-interaction.cpp  microscope-interaction.h
fetch/ui/: AgentStateMenu.cpp  AgentStateMenu.h  DigitizerStateMenu.cpp  DigitizerStateMenu.h  MicroscopeStateMenu.cpp  MicroscopeStateMenu.h  PockelsSpinnerControl.cpp  PockelsSpinnerControl.h  ResonantWrapSpinnerControl.cpp  ResonantWrapSpinnerControl.h  ScannerStateMenu.cpp  ScannerStateMenu.h  digitizer.cpp  digitizer.h  pockels.cpp  pockels.h  window-control-pockels.cpp  window-control-pockels.h
fetch/util/: util-file.cpp  util-file.h  util-image.h  util-nidaqmx.cpp  util-niscope.cpp  util-niscope.h  util-wrap.cpp
fetch/workers/: FrameAverage.cpp  FrameAverage.h  FrameCaster.cpp  FrameCaster.h  FrameInvert.cpp  PixelWiseAverager.cpp  PixelWiseAverager.h  ResonantWrap.cpp  ResonantWrap.h  Terminator.cpp  Terminator.h  WorkAgent.h  WorkTask.cpp  WorkTask.h
src/: agent.cpp  agent.h  asynq.cpp  asynq.h  chan.c  chan.h  common.cpp  common.h  fetch.cpp  fifo.c  frame.cpp  frame.h  linear_scan_mirror.pb.h  object.h  renderer-colormap.cpp  renderer-video-frame.cpp  ring-fifo.h  stdafx.h  task.cpp  task.h  thread.c  thread.h  types.cpp  types.h  units.h  window-video.cpp  window-video.h
src/algo/: m44.c  m44.h  pipeline-image-frame.cpp  pipeline-image-frame.h  pipeline-image-mylib.c  pipeline-image-mylib.h  pipeline-image.h  pipeline.c  pipeline.cu  pipeline.h  pipline.cu  unwarp.c  unwarp.cu  unwarp.h
src/apps/: dumpMessage.cc  fetch.cpp  fetch.qrc  queryStages.cc
src/devices/: DAQChannel.cpp  DAQChannel.h  DiskStream.cpp  DiskStream.h  FieldOfViewGeometry.cpp  FieldOfViewGeometry.h  LinearScanMirror.cpp  LinearScanMirror.h  Microscope.cpp  Microscope.h  NIDAQAgent.cpp  NIDAQAgent.h  Probe.cpp  Probe.h  Scanner3D.cpp  Scanner3D.h  Stage.cpp  Stage.h  Tiling.cpp  Vibratome.cpp  Vibratome.h  ZPiezo.cpp  ZPiezo.h  alazar.c  alazar.h  daq.cpp  daq.h  digitizer.cpp  digitizer.h  pmt.cpp  pmt.h  pockels.cpp  pockels.h  scanner2D.cpp  scanner2D.h  shutter.cpp  shutter.h  tiling.h
src/proto/: GenProto.cmake  daq.proto  digitizer.proto  file.proto  linear_scan_mirror.proto  microscope.proto  pmt.proto  pockels.proto  probe.proto  scanner2d.proto  scanner3d.proto  shutter.proto  stack.proto  stage.proto  tasks.proto  tiling.proto  vibratome.proto  workers.proto  zpiezo.proto
src/tasks/: AdaptiveTiledAcquisition.cpp  AdaptiveTiledAcquisition.h  AutoTileAcquisition.cpp  File.cpp  File.h  (+19 more)
tests/: CMakeLists.txt  alazar.cc  alltests.cc  daq.cc  file.cc  integration.cc  niscope.cc  proto.cc  test.cc
(+122 files in other folders)
